# my_qubit

./: main.py  pyproject.toml
src/my_qubit/: __init__.py  qubit.py
test/: test_XYZ_Gates.py  test_immute.py  test_main.py  test_qubit_in.py  test_value_error.py
