[project]
name = "my-qubit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Omar Faruk", email = "omarfaruk20@iut-dhaka.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.3",
]

[project.scripts]
my-qubit = "my_qubit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
